[package]
name = "sothis"
version = "0.3.0"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>"]
license = "GPL-3.0-or-later"
description = "Tool for replaying historical EVM state."
readme = "README.md"
homepage = "https://github.com/makemake-kbo/sothis"
repository = "https://github.com/makemake-kbo/sothis"
keywords = ["cli", "ethereum", "foundry", "reth", "revm"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
env = "0.0.0"
ethers = {version = "2.0.7", features = ["legacy"]}
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rlp = "0.5.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
