[package]
name = "sothis"
version = "0.4.1"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>"]
license = "AGPL-3.0-only"
description = "Tool for replaying historical EVM state."
readme = "README.md"
homepage = "https://github.com/rainshowerLabs/sothis"
repository = "https://github.com/rainshowerLabs/sothis"
keywords = ["cli", "ethereum", "foundry", "reth", "revm"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.0"
ctrlc = "3.4.0"
ethers = {version = "2.0.7", features = ["legacy"]}
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.4.0"
