[package]
name = "sothis"
version = "0.5.0"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>"]
license = "MPL-2.0"
description = "Tool for replaying historical EVM state."
readme = "README.md"
homepage = "https://github.com/rainshowerLabs/sothis"
repository = "https://github.com/rainshowerLabs/sothis"
keywords = ["cli", "ethereum", "foundry", "reth", "revm"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.8"
ctrlc = "3.4.4"
ethers = {version = "2.0.14", features = ["legacy"]}
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features=false, features = ["blocking", "json", "http2", "rustls-tls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.2"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
